--- a/websiteCCreal/Views/Home/Expenses.cshtml
+++ b/websiteCCreal/Views/Home/Expenses.cshtml
@@ -4,7 +4,62 @@
     ViewData["Title"] = "Expenses";
 
 }
+
+@model List<Expense>
+
 <div class="text-center">
     <h1 class="display-4">Expenses</h1>
-  
+    <br />
+    <hr />
+    <h3>Total expenses $@ViewBag.Expenses</h3>
+    <br />
+    <div class="text-center">
+        <a asp-action="Expenses" class="btn btn-primary">Expenses Tracker</a>
+        <a asp-action="CreateEditExpense" class="btn btn-secondary">Create new</a>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Id
+                </th>
+                <th>
+                    Value
+                </th>
+                <th>
+                    Description
+                </th>
+                <th>
+                    Actions
+                </th>
+
+            </tr>
+
+        </thead>
+        <tbody>
+            @{
+                foreach (var Expense in Model)
+                {
+                    <tr>
+
+                        <td>
+                            @Expense.Id
+                        </td>
+                        <td>
+                            @Expense.Value
+                        </td>
+                        <td>
+                            @Expense.Description
+                        </td>
+                        <td>
+                            <a asp-action="CreateEditExpense" asp-route-id="@Expense.Id">Edit</a>
+                            <a asp-action="DeleteExpense" asp-route-id="@Expense.Id">Delete</a>
+                        </td>
+
+                    
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
 </div>
